preparando para subir

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "trabajo-final",
+  "version": "1.0.0",
+  "description": "tp-final-coder",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
